kyverno-policies/openshift-kyverno-policies/kyverno-node-exporter/kyverno-node-exporter.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name:  kyverno-node-exporter
  annotations:
    policies.kyverno.io/title: node-exporter-custom
    policies.kyverno.io/category: Visa-Custom
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.9.2
    kyverno.io/kubernetes-version: "1.23-1.26"
    policies.kyverno.io/description: >-
      Custom Policy for node-exporter deployment at Visa     
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: securityContext-hostlevelvalidation
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Policy for node-exporter.         
        pattern:
          spec:
            hostNetwork: true
            =(hostIPC): true
            =(hostPID): true 
            securityContext:
              runAsUser: "?*"
              fsGroup: "?*"
              supplementalGroups: "?*" 
            =(ephemeralContainers):
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
            =(initContainers):
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
            containers:
            - securityContext:
                allowPrivilegeEscalation: true
                readOnlyRootFilesystem: false
                privileged: true
                seLinuxOptions:
                  level: "?*"
    - name: host-ports
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: >-
          Use of host ports. The fields spec.containers[*].ports[*].hostPort
          , spec.initContainers[*].ports[*].hostPort, and spec.ephemeralContainers[*].ports[*].hostPort
          must either be unset or set between `0-65535`.          
        pattern:
          spec:
            =(ephemeralContainers):
              - =(ports):
                  - =(hostPort): "0-65535"
            =(initContainers):
              - =(ports):
                  - =(hostPort): "0-65535"
            containers:
              - =(ports):
                  - =(hostPort): "0-65535"
